[package]
name = "tomlq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
toml = "0.5"
tempfile = "3.2"
# Used for parsing args ;)
itertools = "0.10"
anyhow = "1"
thiserror = "1"

[profile.release]
lto = "thin"
panic = "abort"
